Feature #2302 - File Provider: configuration and UIChooser

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -307,6 +307,7 @@
     <string name="upload_to_image" context="upload to. Then choose an Image file">Image</string>
 	<string name="upload_to_audio" context="upload to. Then choose an Audio file">Audio</string>
 	<string name="upload_to_video" context="upload to. Then choose a Video file">Video</string>
+	<string name="upload_to_other" context="upload to. Then choose a Video file">Other File</string>
 	<string name="upload_to_filesystem" context="upload to. Then choose to browse the file system to choose a file">Pick from File System</string>
 	<string name="upload_select_file_type" context="title of the dialog for choosing if a user wants to upload an image, an audio, a video or a file from the system">Select file type</string>
 	<string name="upload_uploading" context="status text">Uploading</string>
