--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="general_menu" context="Title when the left menu is opened">Menu</string>
  
     <string name="secondary_media_service_error_local_folder" context="Local folder Error in Sync Service">The secondary media folder does not exist, please choose a new folder.</string>   
-    
+    <string name="no_external_SD_card_detected" context="when no external card exists">No external SD card detected</string>
     <string name="no_permissions_upload" context="On clicking menu item upload in a incoming shared folder read only">This folder is read only. You have no permissions to upload.</string>
     
     <string name="remove_key_confirmation" context="confirmation message before removing the previously downloaded MasterKey file">You are going to remove the exported master key file</string>  
