--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -395,7 +395,7 @@
     
     <string name="settings_storage_download_location" context="title of the setting to set the default download location">Destino descarga por defecto</string>
     <string name="settings_storage_ask_me_always" context="Whether to always ask the user each time.">Preguntar siempre la ruta de descarga</string>
-    <string name="settings_storage_advanced_devices" context="Whether to enable the storage in advanced devices">Mostrar dispositivos avanzados</string>
+    <string name="settings_storage_advanced_devices" context="Whether to enable the storage in advanced devices">Mostrar dispositivos avanzados (SD externa)</string>
     
     <string name="settings_camera_upload_on" context="settings option">Activar Subidas de la Cámara</string>
     <string name="settings_camera_upload_off" context="settings option">Desactivar las Subidas de la Cámara</string>
