--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -410,7 +410,7 @@
     
     <string name="settings_storage_download_location" context="title of the setting to set the default download location">Default download location</string>
     <string name="settings_storage_ask_me_always" context="Whether to always ask the user each time.">Always ask download location</string>
-    <string name="settings_storage_advanced_devices" context="Whether to enable the storage in advanced devices">Display advanced devices</string>
+    <string name="settings_storage_advanced_devices" context="Whether to enable the storage in advanced devices">Display advanced devices (external SD)</string>
     
     <string name="settings_camera_upload_on" context="settings option">Enable Camera Uploads</string>
     <string name="settings_camera_upload_off" context="settings option">Disable Camera Uploads</string>
